  - Now capable of handling Unicode text
 
All Changes
-----------
Added CDockable class
Added CDC::CreateEllipticRegion
Added CDC::CreateEllipticRegionIndirect
Added CDC::CreatePolygonRgn
Added CDC::CreatePolyPolygonRgn
Added CDC::CreateRectRgn
Added CDC::CreateRectRgnIndirect
Added CDC::DetachRegion
Added CDC::ExtCreateRegion
Added CFrame::AddToolbarButton 
Added CWnd::GetZOrder
Added CWnd::LockWindowUpdate
Added CToolbar::SetButtonWidth (useful for adding a ComboBox to a toolbar)
Added CToolbar::SetImages
Added CMDIFrame::SetActiveMDIChild 
Changed CMDIFrame::GetActiveMDIChild (it now returns a CWnd* instead of a HWND)
Removed CMDIFrame::GetActiveMDIChildCWnd
Renamed CMDIFrame::GetMDIChildVect to CMDIFrame::GetAllMDIChildren  

Subclassed windows now call OnCommand and OnNotify
Exceptions now genereate TRACE output to display the error.

Fixes
-----
Fixed Z order of undocked windows
Added Win98 and WinME support for docking
Fixed dock hinting with Vista AERO 



Version 6.3
===========

Major Changes
-------------
* Added support for docking. See below for more information on Docking  
   - Note: CDockable is now recommended over CSplitter for splitter apps.     
* Added the Fast GDI demo. This demonstrates the use of the TintBitmap function.
* MDI child windows now require a view window. The use of a view window is 
   now the same for Frames, MDI children, and dockables. The MDI demo sample
   has been extended to include ListView and TreeView views.
* Added message translation. This allows modeless dialogs and propertysheets
    to process the tab (and other) keys.
* Added a CWnd::Destroy function. This returns a CWnd back to its default
    state ready to be reused.
* SetView can now be used to change the frame's view from one CWnd to 
    another.
* The Frame now stores which child window had focus before it is de-activated,
    and returns focus to this child when the frame application is reactivated.    
    
    
Fixes
-----    