@@ -26,6 +26,8 @@ Added CDC::DetachRegion
 Added CDC::ExtCreateRegion
 Added CFrame::AddToolbarButton 
 Added CWnd::GetZOrder
+Added CWnd::IsContainer
+Added CWnd::IsDockable
 Added CWnd::LockWindowUpdate
 Added CToolbar::SetButtonWidth (useful for adding a ComboBox to a toolbar)
 Added CToolbar::SetImages
